tests/miniJava/neg/006205_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { void ( 0 ) { } else { } } }
